<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_panel"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/addUserBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/assignRoleBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/assign_roles"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/addUserBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/viewUsersBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_all_users"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/assignRoleBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/system_settings"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/viewUsersBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>